FIN-28 header z-index fix

--- a/src/src_V2/modules/manager/container/header/header.module.css
+++ b/src/src_V2/modules/manager/container/header/header.module.css
@@ -1,5 +1,5 @@
 .header {
-  z-index: 9999999;
+  z-index: 1200;
   display: flex;
   align-items: center;
   justify-content: space-between;
